2006-07-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RVAL2CSTR2): added convenience macro.

2006-06-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_mainloop.c, rbgobject.h, glib2.def: Improve to support
	Win32. rbg_(set|remove)_internal_poll_func are externed.

2006-06-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Fixed wrong include path.
	* src/rbglib.h: Increment version info.

2006-06-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Fixed a problem when the object which extends Module
	can't access the instance methods. Reported by Laurent Sansonetti and Bug #1496185.

2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/type-register?.rb: Remove Gtk.init.
	* src/lib/glib2.rb: Added GLib.exit_application. This is called when it raises
	the exception in a callback proc and it isn't catched in the proc.
	* src/rbgutil.c: Added G_PROTECT_CALLBACK. You need to wrap the functions which
	run in the mainloop with this. This is based on rclosure_marshal_do() in
	src/rbgobj_closure.c.
	* src/rbgobj_closure.c: Apply above G_PROTECT_CALLBACK.
	* src/rbgutil.[ch]: Added GLIST2ARYF, GLIST2ARY2F, GSLIST2ARYF, GLIST2ARY2F. 
	 They free the list with g_list_free() or g_slist_free() internal.
	* src/glib2.def: Follow above changes.
	
2006-06-09  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgobj_object.c: Only let the GObject mark function retrieve
	object properties that it will actually mark. Which is currently just
	other GObjects

2006-06-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_closure.c, glib2.def: Works on Windows again.

2006-05-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobjvalue.c: Use g_type_set_qdata and g_type_get_qdata instead
	of ruby's hash table.

	* src/rbgobj_singal.c: new function gobj_sig_connect_impl
	extracted from gobj_sig_connect and gobj_sig_connect_after.

	* src/rbgobj_signal.c: Make eNoSignal and _signal_list to be static.
