@@ -1,5 +1,7 @@
 2006-07-09  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgobj_object.c: implemented GLib::InitiallyUnowned.
+
 	* src/rbglib.h (RVAL2CSTR2): added convenience macro.
 
 2006-06-30  Masao Mutoh  <mutoh@highway.ne.jp>
